<resources>
    <string name="app_name">nochances</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="register">register</string>
    <string name="profile">profile</string>
    <string name="change">change</string>
    <string name="name">name</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="phone">phone</string>
    <string name="major">major</string>
    <string name="ui_profile_photo_picker_title">"Select profile image"</string>
    <string name="dartmouth_class">dartmouth class</string>
    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>Take picture from gallery</item>
    </string-array>
    <string name="profile_photo_file_name">file_name</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="sign_up">Sign up</string>
    <string name="save_entry">save</string>
    <string name="color">color</string>
    <string name="search_title">search name</string>
    <string name="enemies">Enemies</string>
    <string name="users">Users</string>
    <string-array name="outer_radius">
        <item>200 feet</item>
        <item>220 feet</item>
        <item>240 feet</item>
        <item>260 feet</item>
        <item>300 feet</item>
    </string-array>
    <string-array name="outer_radius_values">
        <item>200</item>
        <item>220</item>
        <item>240</item>
        <item>260</item>
        <item>300</item>
    </string-array>
    <string-array name="middle_radius">
        <item>100 feet</item>
        <item>120 feet</item>
        <item>140 feet</item>
        <item>150 feet</item>
        <item>160 feet</item>
    </string-array>
    <string-array name="middle_radius_values">
        <item>100</item>
        <item>120</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
    </string-array>
    <string-array name="inner_radius">
        <item>50 feet</item>
        <item>60 feet</item>
        <item>70 feet</item>
        <item>80 feet</item>
        <item>90 feet</item>
    </string-array>
    <string-array name="inner_radius_values">
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
    </string-array>
    <string-array name="general_alarm_level">
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>red</item>
    </string-array>
    <string-array name="general_alarm_level_values">
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>red</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="enemieslist">EnemiesList</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="instructions">Choose the level of threat of the enemy</string>
    <string name="swipe_to_answer_call">Swipe to answer call</string>
    <string name="fake_caller">Fake caller!</string>
    <string name="edit_profile">edit profile</string>
    <string name="enemy_profile">enemy profile</string>
    <string name="change_color">Change Color</string>
    <string name="settings">Settings</string>
    <string name="the_sliding_image_for_the_slider">the sliding image for the slider!</string>
</resources>
