<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"


    >
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".register"
        android:background="@drawable/gradient"
        >
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ToolBarStyle"
            android:background="@color/light_orange" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="10dp"
                android:id="@+id/view2"
                app:cardCornerRadius="40dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:layout_margin="16dp"
                android:thicknessRatio="1.2">
                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_launcher_round"
                    />
            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change"
                android:background="@drawable/gradient_button"
                android:onClick="onChangePhotoClicked"
                android:textColor="#ffff"
                android:layout_margin="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#ffff"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="#ffff"
                    android:layout_margin="16dp"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:text="@string/female"
                    android:textColor="#ffff"
                    android:onClick="ButtonRadioCheck"/>

                <RadioButton
                    android:id="@+id/male_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:text="@string/male"
                    android:textColor="#ffff"
                    android:onClick="ButtonRadioCheck"/>
            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                android:textColorHint="#ffff"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="#ffff"
                    android:layout_margin="16dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:textColorHint="#ffff"
                app:passwordToggleEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/password"
                    android:textColor="#ffff"
                    android:textColorHint="#ffff"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffff"

                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColorHint="#ffff"
                    android:textColor="#ffff"
                    android:layout_margin="@dimen/fab_margin"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#ffff"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/major"
                    android:textColorHint="#ffff"
                    android:textColor="#ffff"
                    android:layout_margin="@dimen/fab_margin"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffff"
                android:hint="@string/dartmouth_class">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Dartmouth_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ffff"
                    android:layout_margin="@dimen/fab_margin"
                    android:inputType="number"
                    android:textColor="#ffff"
                    />
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>



    </LinearLayout>
</ScrollView>