<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".EnemiesProfileActivity"
        android:background="@drawable/gradient"
        >
        <android.support.v7.widget.CardView
            android:layout_width="120dp"
            android:layout_height="135dp"
            android:elevation="12dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/view2"
            app:cardCornerRadius="40dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.2">
        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="125dp"
            android:layout_height="141dp"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/jim2" />
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/AlarmLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="#ffff"
                android:padding="@dimen/fab_margin"
                android:textStyle="normal|bold"
                android:textSize="25sp"
                />

            <com.example.nochances.utils.CustomSeekBar
                android:id="@+id/SeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="1500"
                android:progress="50"
                android:layout_gravity="center"
                android:progressDrawable="@android:color/transparent"
                android:minHeight="10dp"
                android:minWidth="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"

                android:padding="@dimen/fab_margin"
                />

            <TextView
                android:id="@+id/color_textView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textColorHint="#ffff"
                android:padding="@dimen/fab_margin"/>



            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColorHint="#ffff"
                android:padding="@dimen/fab_margin"
                android:textColor="#ffff"
                android:textStyle="normal|bold"
                android:textSize="25sp"/>


            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_margin="16dp"
                android:textColorHint="#ffff"
                android:padding="@dimen/fab_margin"
                android:textColor="#ffff"
                android:textStyle="normal|bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/Dartmouth_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dartmouth_class"
                android:textColorHint="#ffff"
                android:layout_margin="@dimen/fab_margin"
                android:padding="@dimen/fab_margin"
                android:textColor="#ffff"
                android:textStyle="normal|bold"
                android:textSize="25sp"/>


            <TextView
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/major"
                android:layout_margin="@dimen/fab_margin"
                android:padding="@dimen/fab_margin"
                android:textColorHint="#ffff"
                android:textColor="#ffff"
                android:textStyle="normal|bold"
                android:textSize="25sp"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>